Wed Jun 11 16:34:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dice.c, dice.h, set.c: use fopen instead of open

Wed Jun 11 15:06:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* html.c, htmlimages.c, board3d/misc3d.c: replace access by
	g_file_test

Tue Jun 10 10:07:33 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkame.c, xpm/Makefile.am: use GTK_STOCK_STOP rather than keeping
	out own copy.

Mon Jun  9 17:56:00 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* M gtkgame.c, gtkwindows.c, gtkwindows.h, pixmaps/Makefile.am,
	pixmaps/gnubg-big.png, gtksplash.c: move gnubg-big.png out of xpm

Mon Jun  9 00:14:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* pixmaps, gtkgame.c, Makefile.am, configure.in: add expected
	directory structure for the icon. Make a windows .ico file

Sat Jun  7 22:41:53 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix a problem with too many trials done. Be a bit more
	verbose when rolling out in the text interface.

	* gnubg.c: extend the CommandRollout help

Fri Jun  6 17:42:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, show.c, doc/Makefile.am, util.c, util.h: install
	documentation in DOCDIR

Wed Jun  4 20:27:41 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, show.c, lib/neuralnet.c: minor compiler warnings

Wed Jun  4 14:26:16 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* render.c: fix problems with 2d player turn arrows

Wed Jun  4 10:38:36 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, board3d/Makefile.am, configure.in: do "PKGDATADIR" the
	recommended way

Wed May 14 10:19:43 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c, sound.h: Make the quiet option work again.

Mon May  5 16:29:51 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, relational.c, play.c: cleanup of the UserCommand function.
	Avoid using UserCommand outside gtk.

Mon May  5 09:36:34 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* record.c: fix illegal g_free in RecordRead