@@ -1,3 +1,8 @@
+Thu Jun 12 00:20:30 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* bearoff.c, bearoff.h: remove unused code to read non-gnubg exact
+	bearoff databases.
+
 Wed Jun 11 16:34:04 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* dice.c, dice.h, set.c: use fopen instead of open
